# dcompass

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  README-CN.md  README.md  commit.nix  commit.sh  flake.nix  rustfmt.toml  shell.nix
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  check.yaml
configs/: default.json  example.yaml  example_full.yaml  fail_default.json  fail_multiple_def.json  fail_recursion.json  fail_rule.json  fail_undef.json  fail_unused_upstreams.yaml  logic_jumble.yaml  query_cache_policy.yaml  success_cidr.yaml  success_geoip.yaml  success_header.yaml  success_rule.json  success_rule_domain_gzip.yaml  success_rule_yaml.yaml  success_zone.yaml
data/: a.cn.zone  cn.mmdb  full.mmdb  ipcidr-test.txt  update.sh
dcompass/: Cargo.toml
dcompass/configs/: default.json  fail_default.json  fail_rule.json
dcompass/src/: main.rs  parser.rs  tests.rs  worker.rs
dmatcher/: Cargo.toml
dmatcher/benches/: benchmark.rs
dmatcher/src/: domain.rs  lib.rs
droute/: Cargo.toml  README.md
droute/benches/: benchmark.rs  native_script.rs  rune_script.rs
droute/configs/: default.json  fail_default.json  fail_rule.json
droute/data/: apple.txt
droute/src/: cache.rs  error.rs  filter.rs  lib.rs  mock.rs  parser.rs  router.rs  upstream.rs
droute/src/router/: filter.rs  matcher.rs  mod.rs  parser.rs  table.rs  upstream.rs  upstreams.rs
droute/src/router/script/: mod.rs  native.rs
droute/src/router/script/message/: helpers.rs  mod.rs
droute/src/router/script/rune_scripting/: basis.rs  mod.rs  types.rs  utils.rs
droute/src/router/script/rune_scripting/message/: helper.rs  mod.rs
droute/src/router/script/utils/: blackhole.rs  domain.rs  geoip.rs  ipcidr.rs  mod.rs
droute/src/router/table/: mod.rs  parsed.rs  rule.rs
droute/src/router/table/parsed/: action.rs  matcher.rs
droute/src/router/table/rule/: actions.rs  builder.rs  matchers.rs  mod.rs
droute/src/router/table/rule/actions/: blackhole.rs  builder.rs  disable.rs  ecs.rs  mod.rs  query.rs  skip.rs
droute/src/router/table/rule/builders/: ifblock.rs  mod.rs
droute/src/router/table/rule/matchers/: all.rs  always.rs  any.rs  builder.rs  domain.rs  expr.pest  expr.rs  geoip.rs  header.rs  ipcidr.rs  mod.rs  not.rs  qtype.rs
droute/src/router/upstream/: client_cache.rs  resp_cache.rs
droute/src/router/upstreams/: builder.rs  client_cache.rs  client_pool.rs  error.rs  mod.rs  parsed.rs  upstream.rs
droute/src/router/upstreams/client_pool/: crypto.rs  udp.rs
droute/src/router/upstreams/client_pool/crypto/: https.rs  tls.rs
droute/src/router/upstreams/upstream/: builder.rs  mod.rs  resp_cache.rs
droute/src/router/upstreams/upstream/qhandle/: https.rs  mod.rs  qos_governor.rs  qos_none.rs  tls-native-tls.rs  tls-rustls.rs  udp.rs  zone.rs
droute/src/router/upstreams/upstream/qhandle/client_pool/: crypto.rs  mod.rs  tcp.rs  udp.rs
droute/src/router/upstreams/upstream/qhandle/client_pool/crypto/: https.rs  tls.rs
droute/src/router/upstreams/upstream/qhandle/tls/: mod.rs  native_tls.rs  rustls.rs
droute/tests/: router.rs
src/: accelerated-domains.china.raw.txt  args.yaml  config.json  filter.rs  main.rs  parser.rs  worker.rs
