[workspace]

members = [
    "dcompass",
    "dmatcher",
    "droute",
]

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
panic = "abort"
debug = 1

# [patch.crates-io]
# implement Clone for FileAuthority.
# trust-dns-server = { git = "https://github.com/LEXUGE/trust-dns", branch = "main" }
# trust-dns-proto = { git = "https://github.com/LEXUGE/trust-dns", branch = "main" }
# trust-dns-client = { git = "https://github.com/LEXUGE/trust-dns", branch = "main" }
