[package]
name = "dcompass"
version = "0.1.0-alpha.1"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2018"
description = "Rule-based high performance DNS server with multi-upstreams, DoT and DoH supports."
repository = "https://github.com/LEXUGE/dcompass"
license = "GPL-3.0"

[features]
geoip-cn = []
geoip-maxmind = []

[dependencies]
async-trait = "^0.1"
trust-dns-proto = { version = "0.20.0", default-features = false }
droute = {version = "0.1.0-alpha.1", path = "../droute", features = ["all"]}
futures = "^0.3"
tokio = { version = "^1.5", features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]}
simple_logger = "^1.11"
log = "^0.4"
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_yaml = "^0.8"
dmatcher = {version = "^0.1", path = "../dmatcher"}
structopt = "^0.3"
ratelimit = "^0.4"

[dev-dependencies]
tokio-test = "^0.4"
