[package]
name = "dcompass"
version = "0.2.0-alpha.1"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2021"
description = "Rule-based high performance DNS server with multi-upstreams, DoT and DoH supports."
repository = "https://github.com/LEXUGE/dcompass"
license = "GPL-3.0"

[features]
geoip-cn = ["droute/geoip-cn"]
geoip-maxmind = ["droute/geoip-maxmind"]

[dependencies]
# used by tokio-console
# console-subscriber = "^0.1"
# tokio = { version = "^1", features = ["rt-multi-thread", "net", "fs", "macros", "io-util", "signal", "sync", "tracing"]}

compact_str = { version = "^0.6", features = ["serde"]}
async-trait = "^0.1"
domain = {version = "^0.7", features = ["bytes"]}
futures = "^0.3"
tokio = { version = "^1", features = ["rt-multi-thread", "net", "fs", "macros", "io-util", "signal", "sync"]}
simple_logger = "^2"
log = "^0.4"
anyhow = "^1.0"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_yaml = "^0.8"
dmatcher = {version = "^0.1", path = "../dmatcher"}
structopt = "^0.3"
bytes = "^1"

# Use rustls on other platforms
[target.'cfg(not(any(target_arch = "mips", target_arch = "mips64")))'.dependencies]
droute = {version = "0.2.0-alpha.1", path = "../droute", features = ["doh-rustls", "dot-rustls"]}

# Use native tls on MIPS
[target.'cfg(any(target_arch = "mips", target_arch = "mips64"))'.dependencies]
droute = {version = "0.2.0-alpha.1", path = "../droute", features = ["doh-native-tls", "dot-native-tls"]}

# Both musl and msvc are not well-supoorted
# Only allow on gnu or none env AND not on windows
# [target.'cfg(all(any(target_env = "gnu", target_env = ""), not(target_os = "windows")))'.dependencies]
# tikv-jemallocator = {version = "^0.4", features = ["background_threads"]}

[dev-dependencies]
tokio-test = "^0.4"
