[package]
name = "dmatcher"
version = "0.1.11"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2021"
description = "A simple domain matching algorithm, intended to be fast."
repository = "https://github.com/LEXUGE/dmatcher"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = {version = "^0.6", features = ["bytes"]}
bytes = "^1"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "benchmark"
harness = false
