[package]
name = "droute"
version = "0.1.0-alpha.1"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2021"
description = "Routing mechanism lib for dcompass the DNS server."
repository = "https://github.com/LEXUGE/dcompass"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
doh-rustls = ["reqwest/rustls-tls", "rustls", "webpki-roots"]
doh-native-tls = ["reqwest/native-tls-vendored", "native-tls"]
geoip = ["maxminddb"]

[dependencies]
# DNS-implementation related dependencies
domain = {version = "^0.6", features = ["bytes"]}
bytes = "^1"

# geoip
maxminddb = { version = "^0.21", optional = true }

# doh
reqwest = { version = "0.11", features = ["socks"], default-features = false}
# doh-native-tls
native-tls = { version = "0.2", optional = true}
# doh-rustls
rustls = {version = "^0.20", features = ["dangerous_configuration"], optional = true }
webpki-roots = { version = "^0.22", optional = true }

# Async-aware dependencies
futures = "^0.3"
tokio = { version = "^1.3", features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]}

# Logic-related dependencies
compact_str = { version = "^0.3", features = ["serde"]}
pest = "^2"
ron = "^0.7"
pest_derive = "^2"
cidr-utils = "^0.5"
once_cell = "^1.7"
dmatcher = {version = "^0.1", path = "../dmatcher"}
log = "^0.4"
serde = { version = "^1.0", features = ["derive", "rc"] }
# CLru supports async, but it is not published yet.
clru = "^0.5"
thiserror = "^1.0"
async-trait = "^0.1"
bb8 = "^0.7"

# (de)compression libs (TODO: can we rewrite it to make it async?)
niffler = "^2"

[dev-dependencies]
tokio-test = "^0.4"
criterion = { version = "^0.3", features = ["async_tokio"]}

[[bench]]
name = "benchmark"
harness = false

[package.metadata.cargo-all-features]
# If your crate has a large number of optional dependencies, skip them for speed
skip_optional_dependencies = true

skip_feature_sets = [
    ["doh-rustls", "doh-native-tls"],
]
