[package]
name = "droute"
version = "0.3.0-alpha.1"
authors = ["Harry Ying <lexugeyky@outlook.com>"]
edition = "2021"
description = "Routing mechanism lib for dcompass the DNS server."
repository = "https://github.com/LEXUGE/dcompass"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rune-scripting"]
doh-rustls = ["reqwest/rustls-tls", "rustls", "webpki-roots"]
doh-native-tls = ["reqwest/native-tls-vendored", "native-tls"]
dot-rustls = ["tokio-rustls", "rustls", "webpki-roots"]
dot-native-tls = ["native-tls", "tokio-native-tls"]
geoip-cn = []
geoip-maxmind = []
rune-scripting = ["rune"]

[dependencies]
# DNS-implementation related dependencies
domain = {version = "^0.7", features = ["bytes"]}
bytes = "^1"

# geoip
maxminddb = "^0.21"

# doh
reqwest = { version = "0.11", features = ["socks"], default-features = false}
# doh-native-tls
# we used vendored flag to make sure when used with tokio-native-tls, feature flags would merge and we can happily vendor openssl!
native-tls = { version = "0.2", features = ["vendored"], optional = true}
# doh-rustls
rustls = {version = "^0.20", features = ["dangerous_configuration"], optional = true }
webpki-roots = { version = "^0.22", optional = true }

#dot
tokio-native-tls = { version = "^0.3", optional = true }
tokio-rustls = { version = "^0.23", optional = true }

# TCP keepalive doesn't help us pool our connections, sadly
socket2 = {version = "^0.4", features = ["all"]}

# Async-aware dependencies
futures = "^0.3"
tokio = { version = "^1", features = ["rt-multi-thread", "net", "fs", "macros", "io-util"]}

# Scripting backends
rune = { version = "^0.12", optional = true }

# Logic-related dependencies
hex = "^0.4"
compact_str = { version = "^0.6", features = ["serde"]}
cidr-utils = { version = "^0.5", git = "https://github.com/compassd/cidr-utils", rev = "c5f5c2ef167b4de9856764fd6b3b84e784b98db2" }
once_cell = "^1.7"
dmatcher = {version = "^0.1", path = "../dmatcher"}
log = "^0.4"
serde = { version = "^1.0", features = ["derive", "rc"] }
# CLru supports async, but it is not published yet.
clru = "^0.5"
thiserror = "^1.0"
async-trait = "^0.1"
deadpool = { version = "^0.9", features = ["managed", "rt_tokio_1"] }

# (de)compression libs (TODO: can we rewrite it to make it async?)
niffler = "^2"

# macro helper
paste = "^1"

# Disable ratelimit on 32-bit platforms
# Related issue: https://github.com/metrics-rs/quanta/pull/55
[target.'cfg(target_pointer_width = "64")'.dependencies]
# governor = {version = "0.3.3-dev", git = "https://github.com/antifuchs/governor"}
governor = "^0.4"

[dev-dependencies]
tokio-test = "^0.4"
criterion = { version = "^0.3", features = ["async_tokio"]}

[[bench]]
name = "native_script"
harness = false

[[bench]]
name = "rune_script"
required-features = ["rune-scripting"]
harness = false

[package.metadata.cargo-all-features]
# If your crate has a large number of optional dependencies, skip them for speed
skip_optional_dependencies = true

skip_feature_sets = [
    ["doh-rustls", "doh-native-tls"],
    ["dot-rustls", "dot-native-tls"],
]
